fix button spacing inside dropdown

--- a/src/app/shared/icon-button/icon-button.component.css
+++ b/src/app/shared/icon-button/icon-button.component.css
@@ -1,6 +1,5 @@
 :host {
   display: flex;
-  justify-content: center;
   align-items: center;
   border-radius: 5px;
   padding: 5px 7px;
